# realtimebuses

./: .gitignore  README.md  at_state.html  choose_a_route.html  display-history.html  display-network.html  display-route.html  get_links.R  gulpfile.js  index.html  madmarch.html  package.json
aklbusdelays/: global.R  server.R  ui.R
aklbusdelays/rsconnect/shinyapps.io/tmelliott/: aklbusdelays.dcf  shinyapp.dcf
assets/css/: app.css
assets/js/: app.min.js
assets/sass/: app.sass
assets/sass/components/: _components.sass  _index.sass  _networkmap.sass  _networkregions.sass  _networkstatus.sass  _routeinfo.sass  _routemap.sass
assets/sass/layouts/: _layouts.sass
assets/sass/settings/: _settings.sass
assets/scripts/: history.js  main.js
data/: .Rhistory  at_state.Rmd  at_state.html  combine_dbs.R  delaysstuff.R  get_day_stats.R  make_history_data.R  make_history_graphs.R  makeplots.R  march.css  march_madness.Rmd  march_madness.html  networkstate.pb  pb2db.R  pb2db_all.R  trip_updates.pb  vehicle_locations.pb  vp.json
server/: CMakeLists.txt  README.md  main.cpp
server/proto/: gtfs-network.proto
shinyapp/: server.R
